# rt

./: CMakeLists.txt  README.md  USAGE.md
adapters/include/: adapters.h  matrix_mul_adapter.h  noise_adapter.h  softmax_adapter.h  vector_add_adapter.h  vector_relu_adapter.h
adapters/src/: matrix_mul_adapter.cpp  noise_adapter.cpp  softmax_adapter.cpp  vector_add_adapter.cpp  vector_relu_adapter.cpp
examples/: matmul_basic.mlir  matmul_massive.mlir  matmul_noised.mlir  matmul_nontrivial.mlir  softmax_basic.mlir  vector_add_basic.mlir  vector_add_massive.mlir  vector_relu_basic.mlir
include/: runtime_api.h
include/core/: allocator.h  graph.h  op.h  stream.h  tensor.h
include/debug/: diff.h  guard.h  record.h  snapshot.h  step.h  trace.h  visualize.h
mlir/: CMakeLists.txt
mlir/include/Runtime/: RuntimeDialect.h  RuntimeDialect.td  RuntimeOps.cpp.inc  RuntimeOps.h  RuntimeOps.h.inc  RuntimeOps.td  RuntimeTypes.h  RuntimeTypes.td
mlir/lib/Runtime/: LowerToRuntime.cpp  Passes.cpp  RuntimeDialect.cpp
mlir/tools/: rt-debug.cpp  rt-graph.cpp  rt-opt.cpp  rt-run.cpp
src/: runtime_api.cpp
src/core/: allocator.cpp  graph.cpp  op.cpp  stream.cpp  tensor.cpp
src/debug/: diff.cpp  guard.cpp  record.cpp  snapshot.cpp  step.cpp  trace.cpp  visualize.cpp
