add_library(RuntimeMLIR STATIC
    lib/Runtime/RuntimeDialect.cpp
    lib/Runtime/Passes.cpp
)

target_include_directories(RuntimeMLIR PUBLIC
    include
    ../adapters/include
)

target_link_libraries(RuntimeMLIR PUBLIC
    gpu_runtime
    LLVMAggressiveInstCombine
    LLVMAnalysis
    LLVMAsmParser
    LLVMAsmPrinter
    LLVMBinaryFormat
    LLVMBitReader
    LLVMBitstreamReader
    LLVMBitWriter
    LLVMCFGuard
    LLVMCGData
    LLVMCodeGen
    LLVMCodeGenTypes
    LLVMCore
    LLVMCoroutines
    LLVMDebugInfoBTF
    LLVMDebugInfoCodeView
    LLVMDebugInfoDWARF
    LLVMDebugInfoDWARFLowLevel
    LLVMDebugInfoGSYM
    LLVMDebugInfoMSF
    LLVMDebugInfoPDB
    LLVMDemangle
    LLVMExecutionEngine
    LLVMFrontendAtomic
    LLVMFrontendDirective
    LLVMFrontendHLSL
    LLVMFrontendOffloading
    LLVMFrontendOpenMP
    LLVMGlobalISel
    LLVMHipStdPar
    LLVMInstCombine
    LLVMInstrumentation
    LLVMipo
    LLVMIRPrinter
    LLVMIRReader
    LLVMJITLink
    LLVMLinker
    LLVMMCDisassembler
    LLVMMC
    LLVMMCParser
    LLVMObjCARCOpts
    LLVMObject
    LLVMObjectYAML
    LLVMOption
    LLVMOrcJIT
    LLVMOrcShared
    LLVMOrcTargetProcess
    LLVMPasses
    LLVMProfileData
    LLVMRemarks
    LLVMRuntimeDyld
    LLVMSandboxIR
    LLVMScalarOpts
    LLVMSelectionDAG
    LLVMSupport
    LLVMSymbolize
    LLVMTableGen
    LLVMTarget
    LLVMTargetParser
    LLVMTextAPI
    LLVMTransformUtils
    LLVMVectorize
    LLVMWindowsDriver
    LLVMX86AsmParser
    LLVMX86CodeGen
    LLVMX86Desc
    LLVMX86Disassembler
    LLVMX86Info
    MLIRAffineAnalysis
    MLIRAffineDialect
    MLIRAffineToStandard
    MLIRAffineTransformOps
    MLIRAffineTransforms
    MLIRAffineUtils
    MLIRAMDGPUDialect
    MLIRAMDGPUToROCDL
    MLIRAMDGPUTransforms
    MLIRAMDGPUUtils
    MLIRAMXDialect
    MLIRAMXTransforms
    MLIRAnalysis
    MLIRArithAttrToLLVMConversion
    MLIRArithDialect
    MLIRArithToLLVM
    MLIRArithTransforms
    MLIRArithUtils
    MLIRArithValueBoundsOpInterfaceImpl
    MLIRArmNeonDialect
    MLIRArmNeonTransforms
    MLIRArmNeonVectorTransformOps
    MLIRArmSMEDialect
    MLIRArmSMEToLLVM
    MLIRArmSMETransforms
    MLIRArmSVEDialect
    MLIRArmSVETransforms
    MLIRArmSVEVectorTransformOps
    MLIRAsmParser
    MLIRAsyncDialect
    MLIRAsyncToLLVM
    MLIRAsyncTransforms
    MLIRBufferizationDialect
    MLIRBufferizationPipelines
    MLIRBufferizationTransformOps
    MLIRBufferizationTransforms
    MLIRBuiltinToLLVMIRTranslation
    MLIRBytecodeOpInterface
    MLIRBytecodeReader
    MLIRBytecodeWriter
    MLIRCallInterfaces
    MLIRCastInterfaces
    MLIRComplexDialect
    MLIRComplexDivisionConversion
    MLIRComplexToLibm
    MLIRComplexToLLVM
    MLIRComplexToStandard
    MLIRControlFlowDialect
    MLIRControlFlowInterfaces
    MLIRControlFlowToLLVM
    MLIRControlFlowTransforms
    MLIRConvertToLLVMInterface
    MLIRConvertToLLVMPass
    MLIRDataLayoutInterfaces
    MLIRDebug
    MLIRDerivedAttributeOpInterface
    MLIRDestinationStyleOpInterface
    MLIRDialect
    MLIRDialectUtils
    MLIRDLTIDialect
    MLIRDLTITransformOps
    MLIREmitCDialect
    MLIREmitCTransforms
    MLIRExecutionEngine
    MLIRExecutionEngineUtils
    MLIRFuncDialect
    MLIRFunctionInterfaces
    MLIRFuncToLLVM
    MLIRFuncTransformOps
    MLIRFuncTransforms
    MLIRFuncUtils
    MLIRGPUDialect
    MLIRGPUPipelines
    MLIRGPUToGPURuntimeTransforms
    MLIRGPUToLLVMIRTranslation
    MLIRGPUToLLVMSPV
    MLIRGPUToNVVMTransforms
    MLIRGPUToROCDLTransforms
    MLIRGPUTransformOps
    MLIRGPUTransforms
    MLIRGPUUtils
    MLIRIndexDialect
    MLIRIndexingMapOpInterface
    MLIRIndexToLLVM
    MLIRInferIntRangeCommon
    MLIRInferIntRangeInterface
    MLIRInferStridedMetadataInterface
    MLIRInferTypeOpInterface
    MLIRIRDL
    MLIRIR
    MLIRLinalgDialect
    MLIRLinalgTransformOps
    MLIRLinalgTransforms
    MLIRLinalgUtils
    MLIRLLVMCommonConversion
    MLIRLLVMDialect
    MLIRLLVMIRTransforms
    MLIRLLVMToLLVMIRTranslation
    MLIRLoopLikeInterface
    MLIRMaskableOpInterface
    MLIRMaskingOpInterface
    MLIRMathDialect
    MLIRMathToLibm
    MLIRMathToLLVM
    MLIRMathToROCDL
    MLIRMathToXeVM
    MLIRMathTransforms
    MLIRMemOpInterfaces
    MLIRMemorySlotInterfaces
    MLIRMemRefDialect
    MLIRMemRefToLLVM
    MLIRMemRefTransformOps
    MLIRMemRefTransforms
    MLIRMemRefUtils
    MLIRMLProgramDialect
    MLIRMLProgramTransforms
    MLIRMPIDialect
    MLIRNVGPUDialect
    MLIRNVGPUToNVVM
    MLIRNVGPUTransformOps
    MLIRNVGPUTransforms
    MLIRNVGPUUtils
    MLIRNVVMDialect
    MLIRNVVMTarget
    MLIRNVVMToLLVMIRTranslation
    MLIRNVVMToLLVM
    MLIRObservers
    MLIROpenACCAnalysis
    MLIROpenACCDialect
    MLIROpenACCMPCommon
    MLIROpenACCTransforms
    MLIROpenACCUtils
    MLIROpenMPDialect
    MLIROpenMPToLLVMIRTranslation
    MLIROpenMPTransforms
    MLIRParallelCombiningOpInterface
    MLIRParser
    MLIRPass
    MLIRPDLDialect
    MLIRPDLInterpDialect
    MLIRPDLToPDLInterp
    MLIRPresburger
    MLIRPtrDialect
    MLIRPtrMemorySpaceInterfaces
    MLIRQuantDialect
    MLIRQuantTransforms
    MLIRQuantUtils
    MLIRReconcileUnrealizedCasts
    MLIRReduce
    MLIRRegisterAllDialects
    MLIRRemarkStreamer
    MLIRRewrite
    MLIRRewritePDL
    MLIRROCDLDialect
    MLIRROCDLTarget
    MLIRROCDLToLLVMIRTranslation
    MLIRRuntimeVerifiableOpInterface
    MLIRSCFDialect
    MLIRSCFToControlFlow
    MLIRSCFTransformOps
    MLIRSCFTransforms
    MLIRSCFUtils
    MLIRShapeDialect
    MLIRShapedOpInterfaces
    MLIRShapeOpsTransforms
    MLIRShardDialect
    MLIRShardingInterface
    MLIRShardTransforms
    MLIRSideEffectInterfaces
    MLIRSMT
    MLIRSparseTensorDialect
    MLIRSparseTensorPipelines
    MLIRSparseTensorTransformOps
    MLIRSparseTensorTransforms
    MLIRSparseTensorUtils
    MLIRSPIRVAttrToLLVMConversion
    MLIRSPIRVBinaryUtils
    MLIRSPIRVConversion
    MLIRSPIRVDeserialization
    MLIRSPIRVDialect
    MLIRSPIRVImageInterfaces
    MLIRSPIRVModuleCombiner
    MLIRSPIRVSerialization
    MLIRSPIRVTarget
    MLIRSPIRVTransforms
    MLIRSPIRVUtils
    MLIRSubsetOpInterface
    MLIRSupport
    MLIRTableGen
    MLIRTargetLLVMIRExport
    MLIRTargetLLVMIRImport
    MLIRTargetLLVMIRTransforms
    MLIRTargetLLVM
    MLIRTblgenLib
    MLIRTensorDialect
    MLIRTensorInferTypeOpInterfaceImpl
    MLIRTensorTilingInterfaceImpl
    MLIRTensorTransformOps
    MLIRTensorTransforms
    MLIRTensorUtils
    MLIRTestTransformDialect
    MLIRTilingInterface
    MLIRTosaDialect
    MLIRTosaShardingInterfaceImpl
    MLIRTosaTransforms
    MLIRTransformDebugExtension
    MLIRTransformDialectInterfaces
    MLIRTransformDialectIRDLExtension
    MLIRTransformDialect
    MLIRTransformDialectTransforms
    MLIRTransformDialectUtils
    MLIRTransformLoopExtension
    MLIRTransformPDLExtension
    MLIRTransforms
    MLIRTransformSMTExtension
    MLIRTransformTuneExtension
    MLIRTransformUtils
    MLIRTranslateLib
    MLIRUBDialect
    MLIRUBToLLVM
    MLIRValueBoundsOpInterface
    MLIRVCIXDialect
    MLIRVectorDialect
    MLIRVectorInterfaces
    MLIRVectorToLLVM
    MLIRVectorToLLVMPass
    MLIRVectorToSCF
    MLIRVectorTransformOps
    MLIRVectorTransforms
    MLIRVectorUtils
    MLIRViewLikeInterface
    MLIRWasmSSADialect
    MLIRX86VectorDialect
    MLIRX86VectorTransformOps
    MLIRX86VectorTransforms
    MLIRX86VectorUtils
    MLIRXeGPUDialect
    MLIRXeGPUToXeVM
    MLIRXeGPUTransformOps
    MLIRXeGPUTransforms
    MLIRXeGPUUtils
    MLIRXeVMDialect
    MLIRXeVMTarget
    MLIRXeVMToLLVMIRTranslation
    MLIRXeVMToLLVM
)

add_executable(rt-run tools/rt-run.cpp)

target_link_libraries(rt-run RuntimeMLIR)
